--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "transit-gateway-inter-region-peering",
-  "version": "2.0.0",
+  "version": "2.2.0",
   "license": "MIT-0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest"
+    "test": "jest",
+    "security-audit": "npm audit",
+    "security-fix": "npm audit fix"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.0",
-    "@types/node": "17.0.38",
-    "@types/prettier": "2.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "aws-cdk": "2.26.0",
-    "eslint": "^8.16.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.3",
-    "ts-node": "^10.8.0",
-    "typescript": "~4.7.2"
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.14.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "aws-cdk": "2.179.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.2.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.4.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.26.0",
-    "constructs": "^10.1.25",
-    "source-map-support": "^0.5.21",
-    "uuidv4": "^6.2.13"
+    "aws-cdk-lib": "2.202.0",
+    "constructs": "^10.3.0",
+    "source-map-support": "^0.5.21"
   }
 }
